--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
            class="smoothScroll btn btn-success btn-lg wow fadeInUp"
            data-wow-delay="1.2s">Veja mais</a> -->
           <a onclick="location.href='#gallery'"
-            class="smoothScroll btn btn-vm btn-lg wow fadeInUp">Veja mais</a>
+            class="smoothScroll btn btn-vm btn-lg wow fadeInUp">VEJA MAIS</a>
 
       </div>
 
