--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
       <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
         <div class="team-thumb">
           <div class="image-holder">
-            <img src="images/team-img4.jpg" class="img-responsive img-circle" alt="Matheus">
+            <img src="images/team-img4.png" class="img-responsive img-circle" alt="Matheus">
           </div>
           <h2 class="heading">Matheus H. Machado</h2>
           <a href="#" class="fa fa-linkedin wow fadeInUp" data-wow-delay="0.6s"></a>
